# test-ur-code-XD

./: .gitignore  404.html  Cargo.toml  README.md  index.html  sitemap.xml
.cargo/: config.toml
.github/workflows/: github-pages.yml
assertions/arithmetic/: index.html
assertions/boolean/: index.html
assertions/configuring-assertions/: index.html
assertions/custom/: index.html
assertions/filesystem/: index.html
assertions/float/: index.html
assertions/output/: index.html
assertions/panic/: index.html
assertions/string/: index.html
crates/demo/: Cargo.toml
crates/demo/src/: main.rs
crates/test-ur-code-xd/: Cargo.toml
crates/test-ur-code-xd-macro/: Cargo.toml
crates/test-ur-code-xd-macro/src/: errors.rs  lib.rs  parameters.rs  permute.rs
crates/test-ur-code-xd-macro/src/parameters/: extracting.rs  generating.rs  parsing.rs
crates/test-ur-code-xd-macro/tests/: simple.rs  test_with_parameter_values_compile_failures.rs
crates/test-ur-code-xd-macro/tests/test_with_parameter_values_compile_failures/: argument_without_parameter.rs  argument_without_parameter.stderr  no_args_no_parens.rs  no_args_no_parens.stderr  no_args_with_parens.rs  no_args_with_parens.stderr  one_arg_not_array.rs  one_arg_not_array.stderr  one_arg_not_identifier.rs  one_arg_not_identifier.stderr  one_arg_not_identifier_pattern.rs  one_arg_not_identifier_pattern.stderr  self_argument.rs  self_argument.stderr
crates/test-ur-code-xd/src/: assertions.rs  capture_output.rs  error.rs  errors.rs  lib.rs  utilities.rs
crates/test-ur-code-xd/src/assertions/: arithmetic.rs  arithmetic_assertions.rs  assertion_parts.rs  bool.rs  bool_assertions.rs  config.rs  custom.rs  custom_assertions.rs  filesystem.rs  filesystem_assertions.rs  float.rs  float_assertions.rs  output.rs  output_assertions.rs  panic.rs  panic_assertions.rs  string.rs  string_assertions.rs
crates/test-ur-code-xd/src/utilities/: capture_output.rs  diff.rs  diff_utilities.rs  panic_message_builder.rs  truncate.rs
crates/test-ur-code-xd/src/utilities/capture_output/: captured_output.rs  error.rs  errors.rs  output_capturer.rs
crates/test-ur-code-xd/tests/: performance.rs  test_assertions.rs  user_doc.rs
doc/test-ur-code-XD/: mkdocs.yml
doc/test-ur-code-XD/docs/: assertions.md  getting-started.md  index.md  tests.md
doc/test-ur-code-XD/docs/assertions/: arithmetic.md  boolean.md  configuring-assertions.md  custom.md  filesystem.md  float.md  index.md  output.md  panic.md  string.md
docs/: for-developers.md
docs/for-developers/: coding-guidelines.md  contributing.md  system-and-repository-setup.md
docs/for-users/: mkdocs.yml
docs/for-users/docs/: getting-started.md  index.md  tests.md
docs/for-users/docs/assertions/: arithmetic.md  boolean.md  configuring-assertions.md  custom.md  filesystem.md  float.md  index.md  output.md  panic.md  string.md
docs/for-users/docs/extending/: recommended-crates.md  writing-your-own-assertions.md
docs/for-users/docs/tests/: parameterized-tests.md
extending/recommended-crates/: index.html
extending/writing-your-own-assertions/: index.html
getting-started/: index.html
search/: search_index.json
tests/parameterized-tests/: index.html
