[package]
authors.workspace      = true
categories.workspace   = true
description            = "Procedural macros for test-ur-code-xd"
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
name                   = "test-ur-code-xd-macro"
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.67"
quote       = "1.0.33"
syn         = { version = "2.0.35", features = ["full", "extra-traits"] }
thiserror   = "1.0.49"

[dev-dependencies]
trybuild = "1.0.85"
